# AutoDocstring

./: README.md  pyproject.toml  requirements.txt
docs/: README.md  doc_oct.txt  requirements_gathering.md  tree.md
src/: main.py
src/doc_oct/: docstring_parser.py  docstring_writer.py  dry_run.py  logger.py  nlp_engine.py  utils.py
src/doc_oct/exceptions/: custom_exceptions.py
src/doc_oct/models/: nlp_model.py
src/doc_oct/utils/: ast_utils.py  file_utils.py  utils.py
tests/: test_docstring_parser.py  test_docstring_writer.py  test_dry_run.py  test_logger.py  test_main.py  test_utils.py
